--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/full-stack-ecommerce
 spring.datasource.username=root
 spring.datasource.password=
 
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
-server.servlet.context-path=/api
+#server.servlet.context-path=/api
+
+# App Properties
+ecommerce.app.jwtCookieName= ecommerce
+ecommerce.app.jwtSecret= ca2ba5976b65b3t6
+ecommerce.app.jwtExpirationMs= 86400000
